# MCP-Server

./: .env-sample  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  cosmos.rs  main.rs  mssql.rs  server.rs
